<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DeepViolet">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints,ScrollViewCount">

        <LinearLayout
            android:id="@+id/layoutMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/logo"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/projectName"
                android:textColor="@color/SeaGreen"
                android:textSize="42sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.054" />


            <TextView
                android:layout_marginTop="10dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/selectInstruments"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.054" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/selectGuitar"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/message"
                android:text="@string/guitar"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:maxWidth="80dp"
                android:maxHeight="80dp"
                android:scaleType="fitCenter"
                android:background="@drawable/border_instrument_1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/selectDrums"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/message"
                android:text="@string/drums"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:maxWidth="80dp"
                android:maxHeight="80dp"
                android:scaleType="fitCenter"
                android:background="@drawable/border_instrument_3"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/selectFlute"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/message"
                android:text="@string/flue"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:maxWidth="80dp"
                android:maxHeight="80dp"
                android:scaleType="fitCenter"
                android:background="@drawable/border_instrument_2"/>





        </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/selectPiano"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/message"
                    android:text="@string/piano"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:maxWidth="80dp"
                    android:maxHeight="80dp"
                    android:scaleType="fitCenter"
                    android:background="@drawable/border_instrument_1"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/selectBass"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/message"
                    android:text="@string/bass"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:maxWidth="80dp"
                    android:maxHeight="80dp"
                    android:scaleType="fitCenter"
                    android:background="@drawable/border_instrument_3"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/selectSax"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/message"
                    android:text="@string/saxophone"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:maxWidth="80dp"
                    android:maxHeight="80dp"
                    android:scaleType="fitCenter"
                    android:background="@drawable/border_instrument_2"/>





            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/selectViolin"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/message"
                    android:text="@string/violin"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:maxWidth="80dp"
                    android:maxHeight="80dp"
                    android:scaleType="fitCenter"
                    android:background="@drawable/border_instrument_1"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/selectSinger"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/message"
                    android:text="@string/singer"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:maxWidth="80dp"
                    android:maxHeight="80dp"
                    android:scaleType="fitCenter"
                    android:background="@drawable/border_instrument_3"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/selectTrumpet"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/message"
                    android:text="@string/Trumpet"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:maxWidth="80dp"
                    android:maxHeight="80dp"
                    android:scaleType="fitCenter"
                    android:background="@drawable/border_instrument_2"/>





            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/selectHarp"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/message"
                    android:text="@string/harp"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:maxWidth="80dp"
                    android:maxHeight="80dp"
                    android:scaleType="fitCenter"
                    android:background="@drawable/border_instrument_1"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/selectAccordion"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/message"
                    android:text="@string/accordion"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:maxWidth="80dp"
                    android:maxHeight="80dp"
                    android:scaleType="fitCenter"
                    android:background="@drawable/border_instrument_3"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/selectClarinet"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/message"
                    android:text="@string/clarinet"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:maxWidth="80dp"
                    android:maxHeight="80dp"
                    android:scaleType="fitCenter"
                    android:background="@drawable/border_instrument_2"/>





            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="50dp"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent"
                    android:background="@drawable/border_user_info">



                </LinearLayout>
            </LinearLayout>






        </LinearLayout>


    </ScrollView>


    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/KSUPurple"
        app:layout_constraintVertical_bias="1.0">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView
            android:layout_width="266dp"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/next"
            android:textColor="@color/KSUPurple"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.054" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.054" />

        <ImageButton
            android:id="@+id/nextInstruments"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:background="@null"
            android:contentDescription="@string/message"
            android:maxWidth="80dp"
            android:maxHeight="80dp"
            android:paddingBottom="2dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/next_arrow" />

    </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>